<resources>
    <string name="app_name">Wheely Tracker</string>
    <string name="service_tracker_id">Service Identifier</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="tracking">Tracking</string>
    <string name="send">Send</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="start_tracking">Start tracking</string>
    <string name="stop_tracking">Stop tracking</string>
    <string name="authenticating">Authenticating</string>
    <string name="sign_out">Sign Out</string>
    <string name="dsc_splash">Splash logo</string>
    <string name="wait_for_connection">Connecting to service. Wait please.</string>
    <string name="e_google_play_services_conn_failed">Connection to Google Play Services has failed with error code %1$s</string>
</resources>
